src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-dwP0.25-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault column width: P0.25\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 300 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 300 × 688, bounds: 1248 × 688, states: [Activated]
