src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-dwU-b.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault column width: U\nborder on"
expression: snapshot
---
initial configure:
size: 0 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1 × 680, bounds: 1240 × 680, states: [Activated]
